// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChart  snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 6`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 7`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 8`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fBPqci"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "circle"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "triangle"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "rect"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "rectRounded"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "rectRot"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "cross"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "crossRot"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "star"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "line"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Point style : "dash"
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 9`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 10`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fBPqci"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Line fill=false
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Line fill=origin
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Line fill=start
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hvUCKZ"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cddmqI"
        >
          Line fill=end
        </span>
        <canvas
          class="chartjs-render-monitor"
          height="0"
          style="display: block;"
          width="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 11`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 12`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 13`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 14`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 15`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 16`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart  snapshot 17`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <canvas
      class="chartjs-render-monitor"
      height="0"
      style="display: block;"
      width="0"
    />
  </div>
</DocumentFragment>
`;
